# create-cpp-starter

./: .clang-tidy  .clangd  .gitignore  README.md  _clang-format
create-cpp-starter/: CMakeLists.txt  create_app.cpp  utils.cpp  utils.hpp
create-cpp-starter/templates/common/: .clang-format  .clangd  .gitignore  gcovr.cfg
create-cpp-starter/templates/common/.github/hooks/: pre-commit
create-cpp-starter/templates/common/cmake/: utils.cmake
create-cpp-starter/templates/common/scripts/: format  prepare  test  test-ui
scripts/: install.sh
